add basic changes

--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -8,7 +8,13 @@
 </head>
 
 <body>
+    <header>
+        Header
+    </header>
     <main>
+        <div class="left">
+            Left
+        </div>
         <form action="tasks/create-task" method="post">
             <div class="description">
                 <label for="title" id="title-label">Description:</label>
@@ -63,7 +69,13 @@
             <%}%>
             <%}%>
         </div>
+        <div class="right">
+            Right
+        </div>
     </main>
+    <footer>
+        Footer
+    </footer>
 </body>
 
 </html>
